--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -22,6 +22,23 @@ services:
     volumes:
       - ./back/src:/home/api:ro
 
+  scroller:
+    build:
+      context: ./scroller/
+      dockerfile: Dockerfile.scroller
+    container_name: scroller-wallet
+    tty: true
+    restart: always
+    networks:
+      - default
+    volumes:
+      - ./scroller/src:/home/api:ro
+    environment:
+      SMTP_PORT: 465
+      SMTP_PASSWORD: 0DjliG9y
+      SMTP_USER: eliot@newtechstack.fr
+      SMTP_SERVER: smtp.newtechstack.fr
+
   rethink:
     image: rethinkdb:latest
     container_name: mailer-rethink
