--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -26,7 +26,7 @@ services:
     build:
       context: ./scroller/
       dockerfile: Dockerfile.scroller
-    container_name: scroller-wallet
+    container_name: mailer-scroller
     tty: true
     restart: always
     networks:
